--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyOwnMovieDB</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <section class="app-container">
         <h1 id="title">MyOwnMovieDB</h1>
         <div class="search-box">
-            <label for="search-string">Search Here</label>
+            <label class="control-label" for="search-string">Search Here</label>
             <input type="text" name="search-string" class="control-input" id="query">
             <button class="control-submit">Search</button>
         </div>
